--- a/docs/backend/java/thread/004.md
+++ b/docs/backend/java/thread/004.md
@@ -11,7 +11,7 @@
 
 ### 线程同步的概念
 
- 	处理多线程问题时，多个线程访问同一个对象，并且某些线程还想修改这个对象。 这时候，我们就需要用到“线程同步”。 线程同步其实就是一种等待机制，多个需要同时访问此对象的线程进入这个对象的等待池形成队列，等待前面的线程使用完毕后，下一个线程再使用。
+> ​	处理多线程问题时，多个线程访问同一个对象，并且某些线程还想修改这个对象。 这时候，我们就需要用到“线程同步”。 线程同步其实就是一种等待机制，多个需要同时访问此对象的线程进入这个对象的等待池形成队列，等待前面的线程使用完毕后，下一个线程再使用。
 
 ### 线程同步的方式
 
@@ -100,7 +100,6 @@
        }
    }
    
-   
    class Main {
    
        public static void main(String[] args) {
@@ -166,7 +165,6 @@
            return true;
        }
    }
-   
    
    class Sync1Main {
    
@@ -278,7 +276,6 @@
        public static void main(String[] args) {
            //开户,存200元,卡号为ABC2019
            Account account = new Account(200, "ABC2019");
-   
    
            //自己在准备去和朋友喝酒，取50块钱
            HandBank handBank_myself = new HandBank(account, 50);
@@ -481,7 +478,6 @@ public class Collection {
         //testCopyOnWriteArrayList();
     }
 
-
     /**
      * ArrayList不是线程安全的
      *
@@ -549,7 +545,6 @@ public class Collection {
         //理论上应该是1000，但是，请看结果,肯定有元素放到了相同的索引处
         System.out.println(list.size());
     }
-
 
 }
 ```
